Refactor menu data handling to implement soft refresh functionality, enhancing user experience with background data updates. Update cache management to allow for improved performance and introduce new state indicators for refresh status in the TabletMenu component. Remove auto-refresh meta tag from index.html for better UX. Add new images to the assets for enhanced visual content across the application.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <meta name="apple-mobile-web-app-title" content="Sultan Bakery" />
     <meta name="format-detection" content="telephone=no" />
     
+    <!-- Auto Refresh - Removed for better UX, using soft refresh instead -->
+    <!-- <meta http-equiv="refresh" content="600" /> -->
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
